rename previous index/home reference to event

--- a/event.html
+++ b/event.html
@@ -28,7 +28,7 @@
     />
   </head>
   <body>
-    <header class="home-header">
+    <header class="event-header">
       <div class="nav-bar">
         <img
           class="logo"
@@ -49,7 +49,7 @@
       <!--End nav bar-->
     </header>
 
-    <main class="home-container">
+    <main class="event-container">
       <!-- Banner -->
       <div class="banner">
         <a class="anchor" id="anchor-start"></a>
@@ -86,8 +86,8 @@
       <!--End of banner-->
       <!-- Section 1 -->
 
-      <div class="index-content">
-        <section class="index-section-info">
+      <div class="event-content">
+        <section class="event-section-info">
           <a class="anchor" id="anchor-about"></a>
           <h2>
             <span class="highlight-outline">Welcome</span>
@@ -119,7 +119,7 @@
         <p class="info-bg-text unselectable">Snowboarding Skiing</p>
 
         <!-- Section 2 -->
-        <section class="index-section-about">
+        <section class="event-section-about">
           <h2>
             <span>Where adventurous spirits</span>
             <span class="highlight-outline">Go all out</span>
@@ -137,7 +137,7 @@
         <p class="info-bg-text unselectable">adventurous spirits</p>
 
         <!-- Section 3 - Activities -->
-        <section class="index-section-activities">
+        <section class="event-section-activities">
           <a class="anchor" id="anchor-activities"></a>
           <div>
             <h2>Activities</h2>
@@ -201,7 +201,7 @@
         <p class="info-bg-text unselectable">Snow Activities</p>
 
         <!-- Section 4 - Team -->
-        <section class="index-section-team">
+        <section class="event-section-team">
           <a class="anchor" id="anchor-team"></a>
           <div>
             <h2>Team</h2>
@@ -250,7 +250,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="home-footer">
+    <footer class="event-footer">
       <div>
         <div>
           <img
